# homeworks-mlops-zoomcamp

./: .gitignore  README.md  pyproject.toml
01/notebooks/: homework01.ipynb
02/: Homework2.ipynb  hpo.py  register_model.py  train.py
03/deploys/: 124cbf46-4bb2-42d2-b847-c294c5df8cc0  a9230bcf-95ae-43b4-99b4-64c22f985f29
04/: Dockerfile  model.bin:Zone.Identifier  respostas.txt  starter.ipynb  starter.py
