[tool.poetry]
name = "homeworks-mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Luis Otavio Mendes da Silva <lluisotavio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xgboost = "^1.6.1"
pandas = "^1.4.2"
mlflow = "^1.26.1"
notebook = "^6.4.11"
scikit-learn = "^1.1.1"
pyarrow = "^8.0.0"
seaborn = "^0.11.2"
hyperopt = "^0.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
